angularapp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-app-service
spec:
  selector:
    app: angular-app
  ports:
  - port: 80  
    targetPort: 80
