angularapp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  labels:
    name: angular-ingress
spec:
  rules:
  - host: app.hypertheory.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: angular-app-service
            port: 
              number: 80
